# Energinet-GX

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: environmental_data__declaration_production_checkpoint.yml  environmental_data_plant_declaration_checkpoint.yml  regelleistung__fcr_checkpoint.yml  scada_el__eta_user30_e_ana_1h_checkpoint.yml  scada_el__eta_user30_e_ana_1m_checkpoint.yml  shared__calendar_checkpoint.yml  svk__eds_fcr_checkpoint.yml
great_expectations/checkpoints/scada_el__scada_el/: eta_user30_e_ana_1h_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  environmental_data__declaration_production_suite.json  environmental_data_plant_declaration_suite.json  regelleistung__fcr_suite.json  scada_el__eta_user30_e_ana_1h_suite.json  scada_el__eta_user30_e_ana_1m_suite.json  shared__calendar_suite.json  svk__eds_fcr_suite.json
great_expectations/expectations/scada_el__scada_el/: eta_user30_e_ana_1h_suite.json
great_expectations/plugins/expectations/: expect_custom_query_to_return_none.py  expect_queried_column_values_to_exist_in_another_table.py  expect_queried_columnlist_to_have_no_duplicates.py  expect_queried_date_column_row_count_to_be.py  expect_queried_date_column_to_have_no_days_missing.py  expect_queried_date_column_values_to_not_be_future_dates.py  expect_queried_table_row_count_to_be.py
great_expectations/src/: data_classes.py  main.py
great_expectations/src/data_owner_assumptions/: datahub_bi__wind.yml  (+7 more)
(+15 files in other folders)
