[project]
name = "DataQuality"
description = "Energinet_kvalitet"
version = "0.1.0"
authors = [
    { name = "Ines Philipsen", email = "ines.artero95@gmail.com" }
]
dependencies = [
    "great_expectations==0.16.10",
    "sqlalchemy==1.4.41",
    "pyodbc==4.0.35",
    "pyspark",
    "delta-spark",
    "psycopg2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "ruff",
    "json_serializable",
    "isort"
]

[tool.isort]
profile = "black"
skip_gitignore = true
extend_skip_glob = ['venv/*', 'docs/*']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
